--- a/src/main/resources/templates/auth/registration-client.html
+++ b/src/main/resources/templates/auth/registration-client.html
@@ -3,52 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
-    <style>
-        .error {
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/auth/registration-client}" th:object="${client}">
-    <div class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
-    <label for="firstName">Имя: </label>
-    <input type="text" id="firstName" th:field="*{firstName}">
-    <br>
+<div class="main">
+    <h1>Регистрация клиента</h1>
 
-    <div class="error" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
-    <label for="lastName">Фамилия: </label>
-    <input type="text" id="lastName" th:field="*{lastName}">
-    <br>
+    <form class="flex-form" th:method="POST" th:action="@{/auth/registration-client}" th:object="${client}">
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
+<!--            <label for="firstName">Имя</label>-->
+            <input type="text" id="firstName" th:field="*{firstName}" placeholder="Имя" required>
+        </div>
 
-    <div class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
-    <label for="email">Адрес эл. почты: </label>
-    <input type="email" id="email" th:field="*{email}">
-    <br>
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
+<!--            <label for="lastName">Фамилия</label>-->
+            <input type="text" id="lastName" th:field="*{lastName}" placeholder="Фамилия" required>
+        </div>
 
-    <div class="error" th:if="${#fields.hasErrors('telNumber')}" th:errors="*{telNumber}"></div>
-    <label for="telNumber">Номер телефона: </label>
-    <input type="text" id="telNumber" th:field="*{telNumber}">
-    <br>
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+<!--            <label for="email">Эл. почта</label>-->
+            <input type="email" id="email" th:field="*{email}" placeholder="Эл. почта" required>
+        </div>
 
-    <div class="error" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
-    <label for="address">Адрес: </label>
-    <input type="text" id="address" th:field="*{address}">
-    <br>
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('telNumber')}" th:errors="*{telNumber}"></div>
+<!--            <label for="telNumber">Номер телефона</label>-->
+            <input type="text" id="telNumber" th:field="*{telNumber}" placeholder="Номер телефона" required>
+        </div>
 
-    <div class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
-    <label for="username">Имя пользователя: </label>
-    <input type="text" id="username" th:field="*{username}">
-    <br>
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
+<!--            <label for="address">Адрес</label>-->
+            <input type="text" id="address" th:field="*{address}" placeholder="Адрес" required>
+        </div>
 
-    <div class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-    <label for="password">Пароль: </label>
-    <input type="password" id="password" th:field="*{password}">
-    <br>
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
+<!--            <label for="username">Имя пользователя</label>-->
+            <input type="text" id="username" th:field="*{username}" placeholder="Имя пользователя" required>
+        </div>
 
-    <input type="submit" value="Зарегистрироваться">
-</form>
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
+<!--            <label for="password">Пароль</label>-->
+            <input type="password" id="password" th:field="*{password}" placeholder="Пароль" required>
+        </div>
+
+        <input type="submit" value="Зарегистрироваться">
+    </form>
+</div>
 
 </body>
 </html>
