--- a/src/main/resources/templates/auth/registration-repairman.html
+++ b/src/main/resources/templates/auth/registration-repairman.html
@@ -3,56 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
-    <style>
-        .error {
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/auth/registration-repairman}" th:object="${repairman}">
-    <div class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
-    <label for="firstName">Имя: </label>
-    <input type="text" id="firstName" th:field="*{firstName}">
-    <br>
+<div class="main">
+    <h1>Регистрация мастера</h1>
 
-    <div class="error" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
-    <label for="lastName">Фамилия: </label>
-    <input type="text" id="lastName" th:field="*{lastName}">
-    <br>
+    <form class="flex-form" th:method="POST" th:action="@{/auth/registration-repairman}" th:object="${repairman}">
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
+            <!--            <label for="firstName">Имя</label>-->
+            <input type="text" id="firstName" th:field="*{firstName}" placeholder="Имя" required>
+        </div>
 
-    <div class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
-    <label for="email">Адрес эл. почты: </label>
-    <input type="email" id="email" th:field="*{email}">
-    <br>
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
+            <!--            <label for="lastName">Фамилия</label>-->
+            <input type="text" id="lastName" th:field="*{lastName}" placeholder="Фамилия" required>
+        </div>
 
-    <div class="error" th:if="${#fields.hasErrors('telNumber')}" th:errors="*{telNumber}"></div>
-    <label for="telNumber">Номер телефона: </label>
-    <input type="text" id="telNumber" th:field="*{telNumber}">
-    <br>
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+            <!--            <label for="email">Эл. почта</label>-->
+            <input type="email" id="email" th:field="*{email}" placeholder="Эл. почта" required>
+        </div>
 
-    <div class="error" th:if="${#fields.hasErrors('experience')}" th:errors="*{experience}"></div>
-    <label for="experience">Опыт работы: </label>
-    <input type="number" id="experience" th:field="*{experience}">
-    <br>
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('telNumber')}" th:errors="*{telNumber}"></div>
+            <!--            <label for="telNumber">Номер телефона</label>-->
+            <input type="text" id="telNumber" th:field="*{telNumber}" placeholder="Номер телефона" required>
+        </div>
 
-    <div class="error" th:if="${#fields.hasErrors('qualification')}" th:errors="*{qualification}"></div>
-    <label for="qualification">Квалификация: </label>
-    <input type="text" id="qualification" th:field="*{qualification}">
-    <br>
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('experience')}" th:errors="*{experience}"></div>
+<!--            <label for="experience">Опыт работы</label>-->
+            <input type="number" id="experience" th:field="*{experience}" min="1" max="50" placeholder="Опыт работы" required>
+        </div>
 
-    <div class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
-    <label for="username">Имя пользователя: </label>
-    <input type="text" id="username" th:field="*{username}">
-    <br>
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('qualification')}" th:errors="*{qualification}"></div>
+<!--            <label for="qualification">Квалификация</label>-->
+            <input type="text" id="qualification" th:field="*{qualification}" placeholder="Квалификация" required>
+        </div>
 
-    <div class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-    <label for="password">Пароль: </label>
-    <input type="password" id="password" th:field="*{password}">
-    <br>
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
+            <!--            <label for="username">Имя пользователя</label>-->
+            <input type="text" id="username" th:field="*{username}" placeholder="Имя пользователя" required>
+        </div>
 
-    <input type="submit" value="Зарегистрироваться">
+        <div>
+            <div class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
+            <!--            <label for="password">Пароль</label>-->
+            <input type="password" id="password" th:field="*{password}" placeholder="Пароль" required>
+        </div>
+
+        <input type="submit" value="Зарегистрироваться">
+    </form>
+</div>
+
+<form >
+
+
+
+
 </form>
 
 </body>
