--- a/src/main/resources/templates/repairmen/index.html
+++ b/src/main/resources/templates/repairmen/index.html
@@ -3,26 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Мастера</title>
+    <link rel="stylesheet" th:href="@{/style.css}">
 </head>
 <body>
 
-<div th:if="${!repairmen.isEmpty()}">
-    <h2>Доступные мастера</h2>
-    <div th:each="repairman : ${repairmen}">
-        <p th:text="${repairman.firstName} + ' ' + ${repairman.lastName}"></p>
-        <p th:text="${repairman.experience}"></p>
-        <p th:text="${repairman.qualification}"></p>
-        <p th:text="'Рабочий график: ' + ${repairman.scheduleString()}"></p>
-        <form th:method="GET" th:action="@{/orders/new}">
-            <input type="hidden" name="repairmanId" th:value="${repairman.id}">
-            <input type="submit" value="Создать заказ">
-        </form>
-        <hr>
+<th:block th:class="navigation-buttons" th:replace="fragments :: nav-bar-client"></th:block>
+
+<div class="main">
+    <h1>Мастера</h1>
+    <h2 th:if="${repairmen.isEmpty()}">В данный момент заказ с выбором мастера недоступен</h2>
+    <h2 th:if="${!repairmen.isEmpty()}">Доступные мастера</h2>
+    <div class="appliances-container" th:if="${!repairmen.isEmpty()}">
+        <div class="appliance" th:each="repairman : ${repairmen}">
+            <div class="p-container">
+                <span class="span-bold">Имя:</span>
+                <span th:text="${repairman.firstName} + ' ' + ${repairman.lastName}"></span>
+            </div>
+            <div class="p-container">
+                <span class="span-bold">Стаж (лет):</span>
+                <span th:text="${repairman.experience}"></span>
+            </div>
+            <div class="p-container">
+                <span class="span-bold">Квалификация:</span>
+                <span th:text="${repairman.qualification}"></span>
+            </div>
+            <div class="p-container">
+                <span class="span-bold">Рабочий график:</span>
+                <span th:text="${repairman.scheduleString()}"></span>
+            </div>
+            <form class="main" th:method="GET" th:action="@{/orders/new}">
+                <input type="hidden" name="repairmanId" th:value="${repairman.id}">
+                <input type="submit" value="Создать заказ">
+            </form>
+        </div>
     </div>
+
 </div>
 
-<div th:if="${repairmen.isEmpty()}">
-    <p>В данный момент заказ с выбором мастера недоступен</p>
+<div >
+
 </div>
 
 </body>
