--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,6 +11,7 @@
     <a th:href="@{/orders}">Заказы</a>
     <a th:href="@{/repairmen}">Мастера</a>
     <a th:href="@{/subscriptions}">Подписки</a>
+    <a th:href="@{/feedback}">Отзывы</a>
     <a th:href="@{/clients/profile}">Профиль</a>
     <a th:href="@{/logout}">Выход</a>
 </div>
@@ -18,6 +19,7 @@
 <div class="navigation-buttons" th:fragment="nav-bar-repairman">
     <a th:href="@{/available-orders}">Заказы</a>
     <a th:href="@{/schedule}">График</a>
+    <a th:href="@{/available-feedback}">Отзывы</a>
     <a th:href="@{/repairmen/profile}">Профиль</a>
     <a th:href="@{/logout}">Выход</a>
 </div>
