--- a/src/main/resources/templates/orders/index.html
+++ b/src/main/resources/templates/orders/index.html
@@ -51,6 +51,10 @@
                 <p class="span-bold">Описание проблемы:</p>
                 <p th:text="${order.description}"></p>
             </div>
+
+            <form class="main" th:method="DELETE" th:action="@{'/orders/' + ${order.id}}">
+                <input class="delete-button" type="submit" value="Отменить">
+            </form>
         </div>
     </div>
     <h2 th:if="${finishedOrders.isEmpty()}">Завершённых заказов нет</h2>
@@ -65,7 +69,7 @@
                 <span class="span-bold">Статус:</span>
                 <span th:text="${order.orderStatus.name}"></span>
             </div>
-            <div class="p-container">
+            <div class="p-container" th:if="${order.appliance}">
                 <span class="span-bold">Техника:</span>
                 <span th:text="${order.appliance.name}"></span>
             </div>
