--- a/src/main/resources/templates/appliances/new.html
+++ b/src/main/resources/templates/appliances/new.html
@@ -11,7 +11,7 @@
 
 <div class="main">
     <h1>Добавить технику</h1>
-    <form class="flex-form" th:method="POST" th:action="@{/appliances}" th:object="${appliance}">
+    <form class="flex-form" th:method="POST" th:action="@{/appliances}" th:object="${appliance}" enctype="multipart/form-data">
         <div>
             <div class="error" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
             <label class="span-bold" for="name">Название</label>
@@ -28,6 +28,10 @@
             <select id="type" th:field="*{type}">
                 <option th:each="type : ${applianceTypes}" th:value="${type.id}" th:text="${type.name}"></option>
             </select>
+        </div>
+        <div>
+            <label class="span-bold" for="name">Изображение</label>
+            <input type="file" id="image" th:field="*{image}">
         </div>
         <input type="submit" value="Добавить">
     </form>
